force-app/main/default/objects/General_Settings__c/General_Settings__c.object-meta.xml
<CustomObject>
    <label>General Setting</label>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>General Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>