force-app/main/default/objects/General_Settings__c/fields/Academy_Campaign_Approver__c.field-meta.xml
<CustomField>
    <fullName>Academy_Campaign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academy Campaign Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings5</relationshipName>
    <type>Lookup</type>
</CustomField>