force-app/main/default/objects/General_Settings__c/fields/Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Name__c</fullName>
    <label>Beneficiary_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>