force-app/main/default/objects/General_Settings__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <label>Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>