force-app/main/default/objects/General_Settings__c/fields/Campaign_Expense_Approver__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Expense_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Expense Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings8</relationshipName>
    <type>Lookup</type>
</CustomField>