force-app/main/default/objects/General_Settings__c/fields/Campaign_Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Final_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Final Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings9</relationshipName>
    <type>Lookup</type>
</CustomField>