force-app/main/default/objects/General_Settings__c/fields/Campaign_Marketing_Manager_Approver__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Marketing_Manager_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Marketing Manager Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_SettingsLdNJ</relationshipName>
    <type>Lookup</type>
</CustomField>