force-app/main/default/objects/General_Settings__c/fields/Digital_Campaign_Approver__c.field-meta.xml
<CustomField>
    <fullName>Digital_Campaign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Digital Campaign Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>