force-app/main/default/objects/General_Settings__c/fields/Expense_Level_1_Approver__c.field-meta.xml
<CustomField>
    <fullName>Expense_Level_1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Level 1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings7</relationshipName>
    <type>Lookup</type>
</CustomField>