force-app/main/default/objects/General_Settings__c/fields/Expense_Level_2_Approver__c.field-meta.xml
<CustomField>
    <fullName>Expense_Level_2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Level 2 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settingsr68A</relationshipName>
    <type>Lookup</type>
</CustomField>