force-app/main/default/objects/General_Settings__c/fields/HR_Campaign_Approver__c.field-meta.xml
<CustomField>
    <fullName>HR_Campaign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Campaign Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings1</relationshipName>
    <type>Lookup</type>
</CustomField>