force-app/main/default/objects/General_Settings__c/fields/Marketing_Campaign_Approver__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Campaign Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings2</relationshipName>
    <type>Lookup</type>
</CustomField>