force-app/main/default/objects/General_Settings__c/fields/Order_Acceptance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Order_Acceptance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Acceptance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_SettingsCM6D</relationshipName>
    <type>Lookup</type>
</CustomField>