force-app/main/default/objects/General_Settings__c/fields/Others_Campaign_Approver__c.field-meta.xml
<CustomField>
    <fullName>Others_Campaign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Others Campaign Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_SettingsG4L8</relationshipName>
    <type>Lookup</type>
</CustomField>