force-app/main/default/objects/General_Settings__c/fields/Sales_Campaign_Approver__c.field-meta.xml
<CustomField>
    <fullName>Sales_Campaign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Campaign Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings4</relationshipName>
    <type>Lookup</type>
</CustomField>