force-app/main/default/objects/General_Settings__c/fields/Service_Campaign_Approver__c.field-meta.xml
<CustomField>
    <fullName>Service_Campaign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Campaign Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings3</relationshipName>
    <type>Lookup</type>
</CustomField>