force-app/main/default/objects/General_Settings__c/fields/Telephony_Campaign_Approver__c.field-meta.xml
<CustomField>
    <fullName>Telephony_Campaign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Telephony Campaign Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings6</relationshipName>
    <type>Lookup</type>
</CustomField>